<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopccomp"
    tools:context=".activities.activity_mostrar_detalles_producto">

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_almacen1"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center_vertical"
        android:text="@string/almacen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_cantidad"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center_vertical"
        android:text="@string/_10_unds"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_estado1"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center_vertical"
        android:text="@string/reacondicionado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cantidad"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="229dp"
        android:layout_height="306dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/producto"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>