<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopccomp"
    tools:context=".activities.activity_eliminar_seleccionar_producto">

    <Button
        android:id="@+id/btn_modificar_borrar"
        android:layout_width="251dp"
        android:layout_height="82dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/mis_botones"
        android:onClick="modificar_borrar"
        android:text="@string/borrar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_productos" />

    <Spinner
        android:id="@+id/sp_productos"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:entries="@array/almacenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_selecciona" />

    <TextView
        android:id="@+id/txt_selecciona"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@color/cardview_shadow_start_color"
        android:paddingStart="80dp"
        android:text="@string/selecciona_un_producto"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_modificar_borrar"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_titulo_modificar_borrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:text="@string/borrar_producto"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>